# ScrewEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ScrewEngine.cpp  ScrewEngine.h  ScrewGraphics.cpp  ScrewGraphics.h  ScrewGraphicsManager.cpp  ScrewGraphicsManager.h  ScrewWindow.cpp  ScrewWindow.h  main.cpp  setup-win32.py
modules/: FindSDL2.cmake
